# pagersduty

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
src/: client.rs  errors.rs  events.in.rs  events.rs  lib.rs
src/events/: v1.rs
src/rest/v2/: client.rs
src/rest/v2/types/: abilities.rs  contact_methods.rs  mod.rs  notification_rules.rs  teams.rs  users.rs
src/types/: contact_methods.in.rs  contact_methods.rs  mod.rs  notification_rules.in.rs  notification_rules.rs  reference.rs  teams.in.rs  teams.rs  users.in.rs  users.rs
testdata/events/: handle_event_serialization_1.json  handle_event_serialization_2.json  trigger_event_serialization_1.json  trigger_event_serialization_2.json
testdata/types/: abilities.json  contact_methods.json  notification_rules.json  teams.json  users.json
