[package]
name = "pagersduty"
version = "0.1.0"
authors = ["Gary M. Josack <gary@byoteki.com>"]
repository = "https://github.com/ZeroCostGoods/pagersduty"
documentation = "https://docs.rs/pagersduty"
license = "MIT OR Apache-2.0"
description = "Rust Client Library for the PagerDuty v2 API"

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2.2"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9"
