[package]
name = "pagersduty"
version = "0.2.0"
authors = ["Gary M. Josack <gary@byoteki.com>"]
repository = "https://github.com/ZeroCostGoods/pagersduty"
documentation = "https://docs.rs/pagersduty"
license = "MIT OR Apache-2.0"
description = "Rust Client Library for the PagerDuty v2 API"

[dependencies]
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
